---
version: 1.20_001
date:    Fri Dec  2 13:59:15 PST 2016
changes:
- Apply PR/170 (fixes ,#131) hiratara@cpan.org++
- Empty mapping value at the end resolves to null (was becoming empty string)
- Apply PR/169 (PR/119) patrick.allen.higgins@gmail.com++
- Output key in warning when duplicate key was found
- Apply PR/157 and PR/168 (@lameventanas++ @perlpunk++)
- Allow reading and writing to IO::Handle
---
version: 1.20
date:    Fri Dec  2 13:20:33 PST 2016
changes:
- Apply and amend PR/146 (quoted map keys) @preaction++
- B::Deparse is loaded at runtime now
- New Feature $YAML::Preserve (Apply PR/9 @fmenabe++)
---
version: 1.19
date:    Fri Nov 18 19:46:44 CET 2016
changes:
- Apply PR/164 pod (link to YAML::Shell)
- Apply PR/151 Fix infinite loop for aliases without a name @bubaflub++
- Apply PR/142 Improve error messages @werekraken++
- Apply PR/162 Improve error messages
- Apply PR/163 Trailing spaces after inline seq/map work now
- Apply PR/154 Add test case for trailing comments @Varadinsky++
---
version: 1.18
date:    Fri Jul  8 14:52:26 UTC 2016
changes:
- Apply PR/161 @perlpunk++
---
version: 1.17
date:    Tue Jul  5 20:20:55 UTC 2016
changes:
- Use Mo 0.40
---
version: 1.16
date:    Sun Jul  3 10:53:06 PDT 2016
changes:
- Apply PR/158 by @bgruening++
- Fix VERSION issue
---
version: 1.15
date:    Sat Apr 18 17:03:09 CEST 2015
changes:
- Fix Issue 149.
- Don't require newlines at end of YAML.
---
version: 1.14
date:    Sat Jan 17 15:32:18 PST 2015
changes:
- Apply PR/145 from @kentnl++
- Support for QuoteNumericStrings Global Setting
---
version: 1.13
date:    Sat Oct 11 18:05:45 CEST 2014
changes:
- Apply PR/140 from @nfg++
- Disable some warnings in YAML::Any
---
version: 1.12
date:    Mon Sep 22 08:24:43 PDT 2014
changes:
- Fix https://rt.cpan.org/Ticket/Display.html?id=97870
---
version: 1.11
date:    Fri Aug 29 20:08:20 PDT 2014
changes:
- Apply PR/139. @ehuelsmann++
---
version: 1.10
date:    Thu Aug 28 22:53:26 PDT 2014
changes: